--- a/local.properties
+++ b/local.properties
@@ -1,5 +1,8 @@
 # This file contains all of the environment specific configuration, change it for your setup
-# It is only needed if you want to run the test or zap-test targets 
+
+# Directory to deploy to
+# /opt/tomcat/webapps
+deploy.dir=C:\\Program Files\\Apache Software Foundation\\Tomcat 5.5\\webapps
 
 # The application being tested
 zap.target=http://localhost:8080/
